--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/nexdrew/jacket",
   "dependencies": {
     "commander": "^2.5.0",
+    "optional": "^0.1.2",
     "request": "^2.51.0",
     "xml2json": "^0.5.1"
   }
