--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jacket",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "CLI for Apache mod_jk status worker (because antiquated tech is cool!)",
   "main": "index.js",
   "bin": {
@@ -33,6 +33,6 @@
     "commander": "^2.5.0",
     "optional": "^0.1.2",
     "request": "^2.51.0",
-    "xml2json": "^0.5.1"
+    "xml2js": "^0.4.4"
   }
 }
